--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
         "spatie/laravel-permission": "^3.13",
+        "srmklive/paypal": "^1.7",
         "watson/breadcrumbs": "^1.1"
     },
     "require-dev": {
