added event email

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "buzz/laravel-google-captcha": "^2.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "goldspecdigital/laravel-eloquent-uuid": "^7.0",
         "guzzlehttp/guzzle": "^6.3",
         "jeroennoten/laravel-adminlte": "^3.2",
         "laravel/framework": "^7.0",
