--- a/.env.example
+++ b/.env.example
@@ -25,12 +25,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST="smtp.googlemail.com"
+MAIL_PORT=465
+MAIL_USERNAME="smtp1@bona.com.sg"
+MAIL_PASSWORD="rose1234"
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="smtp1@bona.com.sg"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -45,6 +45,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+CAPTCHA_SITEKEY="6Lc-QKMZAAAAADUk43T5fTZHN-iguKreVOorMowi"
+CAPTCHA_SECRET="6Lc-QKMZAAAAAFUSnANNF92wNJuT9wPygU4l2I_B"
 
 #PayPal Setting & API Credentials - sandbox
 PAYPAL_SANDBOX_API_USERNAME=
