--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5",
         "appstract/laravel-bootstrap-components": "^2.0",
+        "bumbummen99/shoppingcart": "^2.9",
         "buzz/laravel-google-captcha": "^2.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
