--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "require": {
         "php": "^7.2.5",
         "appstract/laravel-bootstrap-components": "^2.0",
-        "bumbummen99/shoppingcart": "^2.9",
         "buzz/laravel-google-captcha": "^2.3",
+        "darryldecode/cart": "^4.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "goldspecdigital/laravel-eloquent-uuid": "^7.0",
